<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="16px">

    <EditText
        android:id="@+id/edit_task_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_to_be_edited" />

    <TextView
        android:id="@+id/edit_deadline_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_task_edit_text"
        android:layout_marginTop="8px"
        android:text="@string/deadline"
        android:textColor="@color/textColor"
        android:textSize="18sp" />

    <DatePicker
        android:id="@+id/edit_task_deadline"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_deadline_title"
        android:layout_marginTop="8px"
        android:datePickerMode="spinner"
        android:calendarViewShown="false" />

    <CheckBox
        android:id="@+id/edit_important_task_checkbox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_task_deadline"
        android:layout_marginTop="8px"
        android:checked="false"
        android:text="@string/important"
        android:textColor="@color/textColor"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_below="@id/edit_important_task_checkbox"
        android:layout_marginTop="8px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/save_task_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/positive_button_background"
            android:text="@string/save"
            android:textColor="@color/textColor" />

        <Button
            android:id="@+id/close_edit_dialog_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/negative_button_background"
            android:text="@string/cancel"
            android:textColor="@color/importantTask"
            android:layout_marginTop="8px" />
    </LinearLayout>


</RelativeLayout>
